@@ -35,6 +35,7 @@
 - Makes every *time related* stuff synchronised on frame (network preparation)
 - Path finding should uses A-star
 - Change map representation (2d grid are too expensive)
+- Add assert() on grid command position mapping
 ===============================================================================
 
 
