@@ -7,6 +7,7 @@
 - Player owns a gold amount
 - Peon bringing gold to townhall makes the player gain gold
 - Building or training unit cost gold (which is restored in case of cancellation)
+- Build/train command which can't be afforded are surrounded with red square in HUD
 ===============================================================================
 
 ===============================================================================
